--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -1,4 +1,6 @@
-<a  target="_blank" href="">
+error page component
+
+<!-- <a  target="_blank" href="">
   <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-12 mt-5 mb-5">
@@ -317,4 +319,4 @@
     </div>
   </div>
 </div>
-  </a>
+  </a> -->
