Tarea - Rutas Hijas de Héroes

--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -1,4 +1,35 @@
 error page component
+<hr>
+<ul>
+  <li>
+    <a routerLink="/auth/login">LOGIN</a>
+  </li>
+
+  <li>
+    <a routerLink="/auth/registro">REGISTRO</a>
+  </li>
+
+  <li>
+    <a routerLink="/heroes/listado">LISTADO</a>
+  </li>
+
+  <li>
+    <a routerLink="/heroes/agregar">AGREGAR</a>
+  </li>
+
+  <li>
+    <a routerLink="/heroes/editar/:id">EDITAR</a>
+  </li>
+
+  <li>
+    <a routerLink="/heroes/buscar">BUSCAR</a>
+  </li>
+
+  <li>
+    <a routerLink="/heroes/:id">ID</a>
+  </li>
+
+</ul>
 
 <!-- <a  target="_blank" href="">
   <div class="container">
