--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -1,5 +1,15 @@
-<p>home works!</p>
-<hr>
+<mat-sidenav-container fullscreen >
 
+  <mat-sidenav #sidenav>
+    <h1>Sidenav</h1>
+  </mat-sidenav>
 
-<router-outlet></router-outlet>
+  <mat-toolbar>
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="menu_open"></mat-icon>
+    </button>
+  </mat-toolbar>
+
+</mat-sidenav-container>
+
+<div >Please open on Stackblitz to see result</div>
