--- a/src/app/heroes/pages/listado/listado.component.html
+++ b/src/app/heroes/pages/listado/listado.component.html
@@ -1,10 +1,49 @@
-<p>listado works!</p>
+<h1>Listado de Héroes</h1>
+<mat-divider></mat-divider>
+<br>
+
+<div fxLayout="row wrap">
+
+  <div fxFlex="20">
+
+    <mat-card class="example-card" *ngFor="let item of heroes">
+      <div mat-card-avatar class="example-header-image" ></div>
+      <mat-card-subtitle>{{item.superhero}}</mat-card-subtitle>
+      <mat-card-title>{{item.alter_ego}}</mat-card-title>
 
 
-<ul>
-  <li *ngFor="let item of heroes">
-    {{item.superhero}}
-  </li>
+        <img mat-card-image src="assets/heroes/{{item.id}}.jpg" alt="">
+
+        <mat-card-content>
+          <h3>{{item.publisher}}</h3>
+          <p>
+            <strong>Primera aparición</strong> {{item.first_appearance}}
+            <br>
+            <strong>Personajes:</strong> {{item.characters}}
+          </p>
+        </mat-card-content>
+
+      <mat-divider inset></mat-divider>
 
 
-</ul>
+      <mat-card-actions>
+        <button mat-button color="warn">Leer más...</button>
+        <button mat-button color="info">Editar</button>
+      </mat-card-actions>
+
+
+      <mat-card-footer>
+        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      </mat-card-footer>
+
+
+    </mat-card>
+
+  </div>
+
+
+
+
+</div>
+
+
