--- a/src/app/heroes/pages/listado/listado.component.html
+++ b/src/app/heroes/pages/listado/listado.component.html
@@ -2,17 +2,17 @@
 <mat-divider></mat-divider>
 <br>
 
-<div fxLayout="row wrap">
+<div fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="20px">
 
-  <div fxFlex="20">
+  <div fxFlex="20" fxFlex.lg="15" fxFlex.sm="30" *ngFor="let item of heroes">
 
-    <mat-card class="example-card" *ngFor="let item of heroes">
+    <mat-card class="example-card" >
       <div mat-card-avatar class="example-header-image" ></div>
       <mat-card-subtitle>{{item.superhero}}</mat-card-subtitle>
       <mat-card-title>{{item.alter_ego}}</mat-card-title>
 
 
-        <img mat-card-image src="assets/heroes/{{item.id}}.jpg" alt="">
+        <img mat-card-image src="assets/heroes/{{item.id}}.jpg" >
 
         <mat-card-content>
           <h3>{{item.publisher}}</h3>
