--- a/src/app/heroes/components/heroe-tarjeta/heroe-tarjeta.component.html
+++ b/src/app/heroes/components/heroe-tarjeta/heroe-tarjeta.component.html
@@ -19,8 +19,9 @@
 
 
   <mat-card-actions>
-    <button mat-button color="warn">Leer más...</button>
-    <button mat-button color="info">Editar</button>
+    <button mat-button color="warn" [routerLink]="['/heroes', item.id ]">Leer más...</button>
+
+    <button mat-button color="info" [routerLink]="['/heroes/editar', item.id ]">Editar</button>
   </mat-card-actions>
 
 
