--- a/src/app/heroes/pages/listado/listado.component.html
+++ b/src/app/heroes/pages/listado/listado.component.html
@@ -1,4 +1,5 @@
 <h1>Listado de Héroes</h1>
+PRUEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 <mat-divider></mat-divider>
 <br>
 
@@ -11,5 +12,6 @@
   </div>
 
 </div>
+
 
 
